--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body{
+    font-family: 'Courier New', Courier, monospace;
     background-color: rgb(55, 55, 55);
 }
 
@@ -7,6 +8,12 @@ header{
     height: 200px;
     background:url(/Resources/fiber-g347e92296_1920.jpg);
 }
-.header_image{
-    width: 1000%;
+
+header .MainText{
+  margin: auto;
+  width: 50%;
+  border: 1px solid rgba(0, 0, 0, 0);
+  padding: 10px;
+  padding-left: 10%;
+  color: aliceblue;
 }
