--- a/index.css
+++ b/index.css
@@ -14,6 +14,6 @@ header .MainText{
   width: 50%;
   border: 1px solid rgba(0, 0, 0, 0);
   padding: 10px;
-  padding-left: 10%;
   color: aliceblue;
+  text-align: center;
 }
