--- a/index.css
+++ b/index.css
@@ -17,3 +17,20 @@ header .MainText{
   color: aliceblue;
   text-align: center;
 }
+
+main .buttons{
+  width:50%;
+  padding-top: 10%;
+  padding-left: 25%;
+  text-align: center;
+}
+
+main .buttons button{
+  border-radius: 10px;
+  background-color: rgb(84, 0, 103);
+  color: azure;
+  width: 50%;
+  height: 50%   ;
+  padding: 5%;
+  text-align: center;
+}
